# SymbolicRegression

./: README.md  pyproject.toml  setup.py  sr.py  test_sr.py
.github/workflows/: python-package.yml
src/sr/: sr.py
tests/: t.py  test_ode-strogatz.py  test_sr.py
