[project]
name = "sr"
version = "0.0.1"
authors = [
  { name="Julien LIVET", email="julien.livet@free.fr" },
]
description = "A small package about symbolic regression"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["numpy", "sympy", "scipy", "deap", "matplotlib", "scikit-learn", "requests", "pandas"]

[project.urls]
Homepage = "https://github.com/Julien-Livet/SymbolicRegression"
Issues = "https://github.com/Julien-Livet/SymbolicRegression/issues"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
